# cub

./: .gitignore  .pre-commit-config.yaml  221006_NB501647_0200_AH5FWGBGXK.html  221006_NB501647_0200_AH5FWGBGXK.qmd  Makefile  README.md  Snakefile  count.ipynb  create_report.ipynb  create_report.py  create_table.py  cub.sh  cub.yaml  cub_test.sh  names.ipynb  pyproject.toml  styles.css  usefulcode
.ipynb_checkpoints/: count-checkpoint.ipynb
automation/: cub_cron.sh  cub_dispatcher.sh
config/: config.yaml
config/.ipynb_checkpoints/: config-checkpoint.yaml
envs/: cub.yaml
resources/: bartlett_kraken2_index.tsv  pathogen.tsv
scr/: create_table.py
scripts/: bam.py  count.py  create_table.py  cub2.py  post_analysis.py  post_analysis_noscendo.py
workflow/: Snakefile  Snakefile_SE  Snakefile_lib3
workflow/.ipynb_checkpoints/: Snakefile-checkpoint
workflow/rules/: count.smk  count_NOSCENDO.smk  count_lib3.smk
workflow/rules/.ipynb_checkpoints/: count-checkpoint.smk
